24/05/2007 change match.call(expand=F) to match.call(expand.dots=F)
30/05/2007 export S3 methods in NAMESPACE, change sys.frame(sys.parents()) back to sys.parent() in coxme and lmekin
31/05/2007 add Wald test for fixed effects in print.lmekin as suggested by Qiong Yang
07/06/2007 add affected==2 in !all(affected=0 | affected==1) of plot.pedigree
22/10/2007 change License to GPL (>=2) following Kurt Hornik's e-mail
13/12/2207 update align.pedigree.s, autohint.s, check.hint.s from S by Terry Therneau for baboon.pre from Jinliang Wang
19/02/2008 an updated documentation from http://mayoresearch.mayo.edu/mayo/research/biostat/upload/kinship.pdf

1. documented or obvious

.h                      <- Sint and other changes
nlminb                  <- optim
.C()                    <- add PACKAGE = "kinship" as required by R 1.9.0
.First.Lib              <- add nlme, survival, methods
significant:            kinship.so and kinship/R/kinship directly debugged

2. sequence of statements

BDSmatrix.R             <- bdsmatrix.R
BDSmatrix_%_%.R         <- %_%.bdsmatrix.R

3. amend disturbing statements

UseMethod               <- add setGeneric
list or NULL            <- setClassUnion          
unique                  <- add 'missing' to 'bdsmatrix'
setMethod('diag',       <- add nrow=1,ncol=1
setMethod('['           <- add i, j
gchol.bdsmatrix.R       <- omit ... in setMethod('dim') and setMethod('show'

thus ... in the function arguments are dropped


4. other changes

assign                  <- envir as specified in R-FAQ
nDotArgs                <- length(list(...)
object                  <- from in places
diag                    <- setMethod("diag", "diag<-"
gchol                   <- as.matrix()
solve.gchol.bdsmatrix   <- temp@ <--> $
par()$"1em"[2]          <- par()$"cin"[2]/7
plot.pedigree           <- comment on segments at 118,119,124
align.pedigree          <- modify remove()