@@ -1,12 +1,12 @@
 Package: kinship
-Version: 1.1.0-19
-Date: 2008-2-19
+Version: 1.1.0-21
+Date: 2008-4-14
 Title: mixed-effects Cox models, sparse matrices, and modeling data from large pedigrees
 Author: Beth Atkinson (atkinson@mayo.edu) for pedigree
         functions. Terry Therneau (therneau@mayo.edu) for all other functions.
 Maintainer: Jing hua Zhao <jinghua.zhao@mrc-epid.cam.ac.uk>
-Depends: survival, methods, nlme, lattice, R (>= 2.0.0)
-SaveImage: No
+Depends: survival, nlme, lattice, R (>= 2.0.0)
+Imports: methods
 LazyLoad: Yes
 LazyData: Yes
 Description: coxme: general mixed-effects Cox models; kinship: routines
@@ -16,4 +16,4 @@ Description: coxme: general mixed-effects Cox models; kinship: routines
         block-diagonal matrices (which is how kinship matrices are
         stored); gchol: generalized cholesky decompositions
 License: GPL (>= 2)
-Packaged: Tue Feb 19 17:05:31 2008; jhz22
+Packaged: Mon Apr 14 10:53:48 2008; jhz22
