@@ -45,6 +45,9 @@
 22/10/2007 change License to GPL (>=2) following Kurt Hornik's e-mail
 13/12/2207 update align.pedigree.s, autohint.s, check.hint.s from S by Terry Therneau for baboon.pre from Jinliang Wang
 19/02/2008 an updated documentation from http://mayoresearch.mayo.edu/mayo/research/biostat/upload/kinship.pdf
+11/04/2008 remove SaveImage from CRAN warning and drop methods from Depends
+12/04/2008 change Sint to int as in coxmeS.h, so coxme works on Linux 64
+14/04/2008 restore methods in DESCRIPTION
 
 1. documented or obvious
 
